--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack -d --watch",
-    "serve": "http-server -a localhost -p 8080 app",
+    "serve": "http-server -a localhost -p 8080 -S -C cert.pem -K key.pem app",
     "build": "webpack -p"
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
   },
   "repository": {
     "type": "git",
@@ -28,6 +33,12 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "http-server": "^0.9.0"
+    "babel-jest": "^14.1.0",
+    "http-server": "^0.9.0",
+    "jasmine": "^2.4.1",
+    "jasmine-es6": "^0.3.0",
+    "jest": "^14.1.0",
+    "react-addons-test-utils": "^15.3.1",
+    "react-test-renderer": "^15.3.1"
   }
 }
